# Breakout

Breakout/: CMakeLists.txt  README.md  ball.cpp  ball.hpp  block.cpp  block.hpp  collider.cpp  collider.hpp  colors.h  game_object.hpp  levels.cpp  levels.h  main.cpp  paddle.cpp  paddle.hpp  prototypes.h
Breakout.xcodeproj/: project.pbxproj
Breakout/levels/: basic.conf  pokeball.conf
